# pulsar-client-cpp-schema

./: .gitignore  CMakeLists.txt  README.md  pulsar-test-service-start.sh  pulsar-test-service-stop.sh
.github/workflows/: ci-tests.yaml
include/pulsar/schema/: AvroSchema.h  IntSchema.h  Specific.h
java-schema-tests/: pom.xml
java-schema-tests/src/test/java/: AvroSchemaTest.java
java-schema-tests/src/test/resources/: log4j.properties
src/: AvroSchemaExample.cc  CMakeLists.txt  IntSchemaExample.cc  TestUtil.h
